# rust-bitcoinkernel

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DEPENDENCIES.md  README.md  flake.nix
.github/workflows/: bisect.yml  ci.yml  pr-checks.yml
contrib/: README.md  check_must_use.sh  check_subtree_kernel_commits.sh  update_lock_files.sh
examples/: Cargo.toml  README.md  simple_blockreader.rs
examples/src/: blockreader.rs  chain_analysis_blockreader.rs  parallel_blockreader.rs  scripttrace.rs  silentpaymentscanner.rs  silentpaymentscanner_blockreader.rs  simple_blockreader.rs
fuzz/: Cargo.toml
fuzz/common/: lib.rs
fuzz/fuzz_targets/: chainman_process_block.rs  fuzz_target_block_deserialize.rs  fuzz_target_block_hash.rs  fuzz_target_chainman.rs  fuzz_target_chainman_setup.rs  script_verify.rs  scriptpubkey_roundtrip.rs  tx_out.rs
libbitcoinkernel-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  check_subtree_kernel_commits.sh
libbitcoinkernel-sys/src/: lib.rs
src/: CMakeLists.txt  bitcoin-chainstate.cpp  block_reader.cpp  blockreader.rs  init.cpp  lib.rs  test_utils.rs  validation.cpp  verify.rs
src/blockreader/: block_tree_entry.rs  blockreader.rs  chain.rs  mod.rs
src/core/: bitcoin_interop.rs  block.rs  block_tree_entry.rs  iterator.rs  mod.rs  script.rs  script_debug.rs  test_utils.rs  transaction.rs  verify.rs
src/ffi/: mod.rs
src/kernel/: CMakeLists.txt  bitcoinkernel.cpp  bitcoinkernel.h  bitcoinkernel_wrapper.h  blockmanager_opts.h  blockreader.cpp  blocktreestorage.cpp  blocktreestorage.h  (+3 more)
tests/: script_trace.rs  test.rs
(+40 files in other folders)
